Updated file paths for new folders

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <nav>
@@ -19,7 +19,7 @@
     </nav>
 
     <div class="main-area">
-        <img src="google_logo.png" alt="le google logo">
+        <img src="images/google_logo.png" alt="le google logo">
         <form action="">
             <div>
                 <input type="text" class="search-bar">
