Updated padding on logo, and sizing on search bar.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <div class="main-area">
-        <img src="images/google_logo.png" alt="le google logo">
+        <img src="images/google_logo.png" alt="le google logo" style="margin:40px">
         <form action="">           
             <div>
                 <input type="text" class="search-bar">
