Fixed up buttons, and search bar shadow.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div>
                 <input type="text" class="search-bar">
             </div>
-            <div style="margin: 10px; align-items: center;">
-                <input type="submit" value="Google Search" class="two-buttons">
+            <div style="margin:20px; text-align: center;">
+                <button class="two-buttons">Google Search</button>
                 <button class="two-buttons">I'm Feeling Lucky</button>
             </div>
         </form>
