Added the magnifying glass into the search bar.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Google</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
+    <!-- Navigation -->
     <nav>
         <ul class="top-nav">
             <li><a href="">About</a></li>
@@ -18,10 +20,12 @@
         </ul>
     </nav>
 
+    <!-- Logo and Search Area-->
     <div class="main-area">
         <img src="images/google_logo.png" alt="le google logo" style="margin:40px">
         <form action="">           
             <div>
+                <img src="images/magniglass.jpg" alt="a magnifying glass" class="magglass">
                 <input type="text" class="search-bar">
             </div>
             <div style="margin:20px; text-align: center;">
@@ -31,6 +35,7 @@
         </form>
     </div>
 
+    <!-- Footer boy -->
     <footer></footer>
 </body>
 </html>
