Changed png for magnifying glass, and added microphone into search bar.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <img src="images/google_logo.png" alt="le google logo" style="margin:40px">
         <form action="">           
             <div>
-                <img src="images/magniglass.jpg" alt="a magnifying glass" class="magglass">
+                <img src="images/magglass.png.png" alt="a magnifying glass" class="magglass">
                 <input type="text" class="search-bar">
+                <img src="images/google-mic.png" alt="the google mic" class="g-mic">
             </div>
             <div style="margin:20px; text-align: center;">
                 <button class="two-buttons">Google Search</button>
