--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <!-- Navigation -->
     <nav>
         <ul class="top-nav">
-            <li><a href="">About</a></li>
-            <li><a href="">Store</a></li>
-            <li><a href="">Gmail</a></li>
-            <li><a href="">Images</a></li>
-            <li><a href="">image</a></li>
-            <li><a href="">image</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Store</a></li>
+            <li><a href="#">Gmail</a></li>
+            <li><a href="#">Images</a></li>
+            <li><a href="#">image</a></li>
+            <li><a href="#">image</a></li>
         </ul>
     </nav>
 
