--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
 
 <body>
     <!-- Navigation -->
-    <nav>
-        <ul class="top-nav">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Store</a></li>
-            <li><a href="#">Gmail</a></li>
-            <li><a href="#">Images</a></li>
-            <li><a href="#">image</a></li>
-            <li><a href="#">image</a></li>
-        </ul>
-    </nav>
-
+    <ul class="top-nav">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Store</a></li>
+        <li style="float:right;"><a href="#">image</a></li>
+        <li style="float:right;"><a href="#">image</a></li>
+        <li style="float:right;"><a href="#">Images</a></li>
+        <li style="float:right;"><a href="#">Gmail</a></li>
+    </ul>
+    
     <!-- Logo and Search Area-->
     <div class="main-area">
         <img src="images/google_logo.png" alt="le google logo" style="margin:40px">
