Added the profile pic and apps image to nav bar.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     <ul class="top-nav">
         <li><a href="#">About</a></li>
         <li><a href="#">Store</a></li>
-        <li style="float:right;"><a href="#">image</a></li>
-        <li style="float:right;"><a href="#">image</a></li>
+        <li style="float:right;">
+            <a href="#">
+                <img style="position: relative; top:-15px; right: 10px;" src="images/profile-pic.png" alt="Me and Poopy">
+            </a>
+        </li>
+        <li style="float:right;">
+            <a href="#">
+                <img src="images/3grid.png" alt="The apps">
+            </a>
+        </li>
         <li style="float:right;"><a href="#">Images</a></li>
         <li style="float:right;"><a href="#">Gmail</a></li>
     </ul>
