--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
     </div>
 
     <!-- Footer boy -->
-    <footer></footer>
+        <ul class="footer">
+            <li><a>Advertising</a></li>
+            <li><a>Business</a></li>
+            <li><a>How Search Works</a></li>
+        </ul>
+        <ul class="footer-right">
+            <li><a>Privacy</a></li>
+            <li><a>Terms</a></li>
+            <li><a>Settings</a></li>
+        </ul>
 </body>
 </html>
