--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
     <div class="main-area">
         <img src="images/google_logo.png" alt="le google logo" style="margin:35px">
         <form action="">           
-            <div>
+            
                 <img src="images/magglass.png.png" alt="a magnifying glass" class="magglass">
                 <input type="text" class="search-bar">
                 <img src="images/google-mic.png" alt="the google mic" class="g-mic">
-            </div>
-            <div style="margin:20px; text-align: center;">
+        </form>    
+            <div style="margin: 20px auto; text-align: center;">
                 <button class="two-buttons">Google Search</button>
                 <button class="two-buttons">I'm Feeling Lucky</button>
             </div>
-        </form>
+        
     </div>
 
     <!-- Footer boy -->
